--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+          cache: 'gradle'
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
@@ -31,18 +32,24 @@ jobs:
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      # Build the Debug APK
+      # Decode and write the signing key from secrets
+      - name: Decode signing key
+        run: echo "${{ secrets.SIGNING_KEY_BASE64 }}" | base64 -di > keystore.jks
+
+      # Build the APK
       - name: Build APK
         run: |
           chmod +x ./gradlew
           ./gradlew assembleRelease
         env:
-          DANDANPLAY_APP_ID: ${{ secrets.DANDANPLAY_APP_ID }}
-          DANDANPLAY_APP_SECRET: ${{ secrets.DANDANPLAY_APP_SECRET }}
+          KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
 
+      # Sign the APK (Already handled by Gradle)
       # Upload APK as artifact
       - name: Upload Signed APK
         uses: actions/upload-artifact@v4
         with:
           name: pre-release
-          path: app/build/outputs/apk/debug/*.apk
+          path: app/build/outputs/apk/release/*.apk
